--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Rijans Personal Site </title>
 </head>
-<body>
+<body style="background-color:lightpink;">
     <table cellspacing="20">
         <tr>
-            <td><img src="/images/Riju.png" alt="Rijans Bhagat" height="200px"></td>
+            <td><img src="images/Riju.png" alt="Rijans Bhagat" height="200px"></td>
             <td><h1>Rijans Bhagat</h1>
                 <p><em>Junior in ICT at <strong><a href="https://pdpu.ac.in/">Pandit Deendayal Energy University</a></strong>.</em></p>
                 <p>I have great intrests in Photography, Graphic Design, Mangement and Web Development.</p></td>
