--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Rijans Personal Site </title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="/images/Riju.png" alt="Rijans Bhagat" height="200px"></td>
+            <td><img src="images/Riju.png" alt="Rijans Bhagat" height="200px"></td>
             <td><h1>Rijans Bhagat</h1>
                 <p><em>Junior in ICT at <strong><a href="https://pdpu.ac.in/">Pandit Deendayal Energy University</a></strong>.</em></p>
                 <p>I have great intrests in Photography, Graphic Design, Mangement and Web Development.</p></td>
