--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQHcmo3NMYa4sg/profile-displayphoto-shrink_400_400/0/1640853203007?e=1671667200&v=beta&t=XvjgN426GBq8q2CmN9PUKuJIc305JHw6ks7o_jv59Sw" alt="Rijans Bhagat" height="200px"></td>
+            <td><img src="https://pbs.twimg.com/profile_images/1405840976241778698/UOFjUNl5_400x400.jpg" alt="Rijans Bhagat" height="200px"></td>
             <td><h1>Rijans Bhagat</h1>
                 <p><em>Junior in ICT at <strong><a href="https://pdpu.ac.in/">Pandit Deendayal Energy University</a></strong>.</em></p>
                 <p>I have great intrests in Photography, Graphic Design, Mangement and Web Development.</p></td>
